--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     }],
     "minimum-stability": "stable",
     "require": {
-        "laravel/framework": "^8.0",
-        "php": "^8.0"
+        "laravel/framework": "^7.24||^8.0",
+        "php": "^7.4||^8.0"
     },
     "autoload": {
         "psr-4": {
